fix: 🐛 contact padding on mobile

--- a/src/sections/Contact/Contact.module.scss
+++ b/src/sections/Contact/Contact.module.scss
@@ -7,6 +7,10 @@
   position: relative;
   background: $color-light-bg;
 
+  @media (max-width: $screen-sm) {
+    padding: 0 10px;
+  }
+
   .contentContainer {
     background: $color-dark;
     width: 100%;
